# seriously_api

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: server.rs
db/: Cargo.toml
db/src/: db_url_encoded.rs  lib.rs
entity/src/: mod.rs  sea_orm_active_enums.rs  user.rs
migration/src/: lib.rs  m20231209_131553_create_table_user.rs  main.rs
src/: main.rs
