[package]
name = "seriously_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [".", "db", "entity", "migration", "api"]


[dependencies]
api = { path = "api" }
entity = { path = "entity" }


[workspace.dependencies]
dotenvy = "0"
db = { path = "db" }
axum = "0.7"
sea-orm = { version = "0.12", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-json",
] }
tokio = { version = "1", features = ["full"] }
migration = { path = "migration" }
