[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { workspace = true }
tokio = { workspace = true, features = ["full"] }
sea-orm = { workspace = true, features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-json",
] }
migration = { workspace = true }
axum = { workspace = true }
dotenvy = { workspace = true }
